--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,25 +1,75 @@
+/**
 $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 @import '../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
 @import '../bower_components/bootstrap-social/bootstrap-social.scss';
 $fa-font-path: "../bower_components/font-awesome/fonts";
 @import '../bower_components/font-awesome/scss/font-awesome';
+*/
 
 /**
  * App-wide Styles
  */
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+// .browserupgrade {
+//   margin: 0.2em 0;
+//   background: #ccc;
+//   color: #000;
+//   padding: 0.2em 0;
+// }
+
+// Component styles are injected through grunt
+// xxxxinjector
+// @import 'admin/admin.scss';
+// @import 'main/main.scss';
+// @import '../components/footer/footer.scss';
+// @import '../components/modal/modal.scss';
+// @import '../components/oauth-buttons/oauth-buttons.scss';
+// xxxxxendinjector
+
+
+$fa-font-path: "/bower_components/font-awesome/fonts";
+
+@import 'font-awesome/scss/font-awesome';
+
+/**
+ * App-wide Styles
+ */
+html {
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	width: 100%;
+	height: 100%;
+	background-color: #e74c3c;
+	margin: 0;
+}
+
+button {
+	cursor: pointer;
+}
+
+.root-container {
+	width: 100%;
+	height: 100%;
+}
+
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 730px;
+    }
 }
 
 // Component styles are injected through grunt
 // injector
-@import 'admin/admin.scss';
-@import 'main/main.scss';
-@import '../components/footer/footer.scss';
-@import '../components/modal/modal.scss';
-@import '../components/oauth-buttons/oauth-buttons.scss';
+@import 'pokedex/pokedex.scss';
 // endinjector
